--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -207,13 +207,13 @@
     <ClInclude Include="CrossSection\CrossSection.h" />
     <ClInclude Include="Cuda\CudaArray.h" />
     <ClInclude Include="Cuda\Cuda_helper_math_host.h" />
-    <ClInclude Include="DispersionHelper.h" />
     <ClInclude Include="Heightfield\DispersionHelper.h" />
     <ClInclude Include="Heightfield\Heightfield.h" />
     <ClInclude Include="Heightfield\fluctuationHeightfield.h" />
     <ClInclude Include="Heightfield\ftleHelperFunctions.h" />
     <ClInclude Include="Heightfield\HightfieldFTLE.h" />
     <ClInclude Include="FSLE\FSLE.h" />
+    <ClInclude Include="Interpolation\Interpolation.h" />
     <ClInclude Include="Options\CrossSectionOptions.h" />
     <ClInclude Include="Options\DispresionOptions.h" />
     <ClInclude Include="Options\fluctuationheightfieldOptions.h" />
@@ -288,7 +288,6 @@
     <ClInclude Include="Graphics\BoxRenderer.h" />
     <ClInclude Include="Graphics\PathlineRenderer.h" />
     <ClInclude Include="Graphics\StreamlineRenderer.h" />
-    <ClInclude Include="HelperFunctions\HelperFunctions.h" />
     <ClInclude Include="Options\ImGuiOptions.h" />
     <ClInclude Include="Options\RaycastingOptions.h" />
     <ClInclude Include="Options\SolverOptions.h" />
