--- a/imgui.ini
+++ b/imgui.ini
@@ -4,47 +4,52 @@ Size=400,400
 Collapsed=0
 
 [Window][Line Rendering Options]
-Pos=18,204
+Pos=18,136
 Size=366,237
 Collapsed=1
 
 [Window][Log]
-Pos=50,513
+Pos=15,161
 Size=350,303
 Collapsed=1
 
 [Window][Raycasting Options]
-Pos=46,623
-Size=377,281
-Collapsed=1
-
-[Window][Solver Options]
-Pos=19,244
-Size=384,507
-Collapsed=1
-
-[Window][Dispersion Options]
-Pos=14,240
-Size=403,413
+Pos=47,745
+Size=377,231
 Collapsed=0
 
+[Window][Solver Options]
+Pos=16,88
+Size=379,565
+Collapsed=0
+
+[Window][Dispersion Options]
+Pos=16,218
+Size=403,413
+Collapsed=1
+
 [Window][Fluctuation Height-field]
-Pos=22,107
+Pos=19,67
 Size=378,449
 Collapsed=1
 
 [Window][Cross-Section]
-Pos=24,5
+Pos=19,22
 Size=392,303
 Collapsed=1
 
 [Window][Turbulent Mixing]
-Pos=25,137
+Pos=15,110
 Size=362,69
 Collapsed=1
 
 [Window][Time-Space]
-Pos=30,70
-Size=328,220
+Pos=20,45
+Size=391,213
 Collapsed=1
+
+[Window][Datasets]
+Pos=17,685
+Size=374,61
+Collapsed=0
 
