--- a/imgui.ini
+++ b/imgui.ini
@@ -11,15 +11,15 @@ Collapsed=0
 [Window][Log]
 Pos=26,114
 Size=350,303
-Collapsed=1
+Collapsed=0
 
 [Window][Raycasting Options]
-Pos=457,140
+Pos=21,230
 Size=377,231
 Collapsed=1
 
 [Window][Solver Options]
-Pos=29,239
+Pos=114,440
 Size=379,565
 Collapsed=0
 
@@ -49,7 +49,12 @@ Size=391,213
 Collapsed=1
 
 [Window][Datasets]
-Pos=476,55
+Pos=476,54
 Size=374,61
+Collapsed=0
+
+[Window][Rendering Options]
+Pos=504,125
+Size=351,333
 Collapsed=0
 
