--- a/imgui.ini
+++ b/imgui.ini
@@ -9,24 +9,24 @@ Size=366,242
 Collapsed=0
 
 [Window][Log]
-Pos=495,87
+Pos=962,74
 Size=371,253
-Collapsed=1
+Collapsed=0
 
 [Window][Raycasting Options]
-Pos=45,267
+Pos=504,571
 Size=375,422
 Collapsed=0
 
 [Window][Solver Options]
-Pos=61,101
-Size=451,681
-Collapsed=1
+Pos=115,127
+Size=451,769
+Collapsed=0
 
 [Window][Dispersion Options]
-Pos=12,77
+Pos=1209,185
 Size=403,413
-Collapsed=1
+Collapsed=0
 
 [Window][Fluctuation Height-field]
 Pos=20,188
@@ -34,32 +34,37 @@ Size=418,522
 Collapsed=1
 
 [Window][Cross-Section]
-Pos=14,17
+Pos=546,139
 Size=392,303
-Collapsed=1
+Collapsed=0
 
 [Window][Turbulent Mixing]
-Pos=18,55
+Pos=526,10
 Size=362,69
 Collapsed=1
 
 [Window][Time-Space]
-Pos=483,9
+Pos=527,48
 Size=391,213
 Collapsed=1
 
 [Window][Datasets]
-Pos=564,74
+Pos=442,44
 Size=374,56
 Collapsed=0
 
 [Window][Rendering Options]
-Pos=21,155
-Size=379,374
-Collapsed=1
+Pos=586,175
+Size=377,374
+Collapsed=0
 
 [Window][Time-Space Rendering]
-Pos=60,60
-Size=386,529
-Collapsed=1
+Pos=1004,60
+Size=393,440
+Collapsed=0
+
+[Window][View Options]
+Pos=18,14
+Size=372,164
+Collapsed=0
 
