--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\git_projects\Flow_Visualization\cudaCompress\src;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\include;D:\git_projects\Flow_Visualization\Includes;D:\git_projects\Flow_Visualization\cudaCompress;$(IncludePath)</IncludePath>
+    <IncludePath>D:\git_projects\Flow_Visualization\cudaCompress;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\include;D:\git_projects\Flow_Visualization\Includes;D:\git_projects\Flow_Visualization\cudaCompress\src;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\lib\x64;$(SolutionDir)Libs\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -90,7 +90,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\git_projects\Flow_Visualization\cudaCompress\src;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\include;D:\git_projects\Flow_Visualization\Includes;D:\git_projects\Flow_Visualization\cudaCompress;$(IncludePath)</IncludePath>
+    <IncludePath>D:\git_projects\Flow_Visualization\cudaCompress;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\include;D:\git_projects\Flow_Visualization\Includes;D:\git_projects\Flow_Visualization\cudaCompress\src;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;$(SolutionDir)Libs\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -220,6 +220,7 @@
     <ClCompile Include="cudaCompress\src\examples\GPUResources.cpp" />
     <ClCompile Include="cudaCompress\src\examples\tools\rawfile.cpp" />
     <ClCompile Include="cudaCompress\src\examples\tthread\tinythread.cpp" />
+    <ClCompile Include="Graphics\StreamlineRenderer.cpp" />
     <ClCompile Include="Particle\ParticleHelperFunctions.cpp" />
     <CudaCompile Include="Raycaster\FieldGenerator3D.cu" />
     <CudaCompile Include="Raycaster\TimeSpaceField.cu">
