--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\git_projects\Flow_Visualization\cudaCompressInclude;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;D:\git_projects\Flow_Visualization\Includes;D:\git_projects\Flow_Visualization\cudaCompress\src;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)cudaCompressInclude;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;$(SolutionDir)Includes;$(SolutionDir)cudaCompress\src;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;$(SolutionDir)Libs\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -90,7 +90,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\git_projects\Flow_Visualization\cudaCompressInclude;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;D:\git_projects\Flow_Visualization\Includes;D:\git_projects\Flow_Visualization\cudaCompress\src;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)cudaCompressInclude;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;$(SolutionDir)Includes;$(SolutionDir)cudaCompress\src;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;$(SolutionDir)Libs\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
