--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,10 @@ mono_crash.*
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-#x64/
-#x86/
+/[Rr]elease/
+/[Rr]eleases/
+/x64/
+/x86/
 bin/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
@@ -41,6 +41,10 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+
+
+/cudaCompress/src/cudaCompress
+
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
