--- a/imgui.ini
+++ b/imgui.ini
@@ -9,18 +9,18 @@ Size=366,242
 Collapsed=0
 
 [Window][Log]
-Pos=2133,225
+Pos=2071,-1
 Size=485,261
 Collapsed=0
 
 [Window][Raycasting Options]
-Pos=17,1274
+Pos=13,303
 Size=505,424
-Collapsed=1
+Collapsed=0
 
 [Window][Solver Options]
-Pos=12,107
-Size=487,701
+Pos=549,23
+Size=487,609
 Collapsed=0
 
 [Window][Dispersion Options]
@@ -49,12 +49,12 @@ Size=391,213
 Collapsed=1
 
 [Window][Datasets]
-Pos=11,5
-Size=490,90
+Pos=11,0
+Size=490,91
 Collapsed=0
 
 [Window][Rendering Options]
-Pos=17,745
+Pos=13,291
 Size=483,442
 Collapsed=0
 
@@ -64,7 +64,7 @@ Size=423,490
 Collapsed=0
 
 [Window][View Options]
-Pos=520,11
+Pos=18,124
 Size=490,158
-Collapsed=1
+Collapsed=0
 
