--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -172,7 +172,7 @@
     </CudaCompile>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
-      <CodeGeneration>compute_61,sm_61</CodeGeneration>
+      <CodeGeneration>compute_75,sm_75</CodeGeneration>
       <Optimization>O3</Optimization>
       <GPUDebugInfo>false</GPUDebugInfo>
     </CudaCompile>
@@ -224,6 +224,7 @@
     <ClCompile Include="Graphics\StreamlineRenderer.cpp" />
     <ClCompile Include="Includes\ScreenGrab11.cpp" />
     <ClCompile Include="Particle\ParticleHelperFunctions.cpp" />
+    <CudaCompile Include="Raycaster\CallerFunctions.cu" />
     <CudaCompile Include="Raycaster\FieldGenerator3D.cu" />
     <CudaCompile Include="Raycaster\TimeSpaceField.cu">
       <FileType>Document</FileType>
@@ -287,6 +288,7 @@
     <ClInclude Include="Includes\ScreenGrab11.h" />
     <ClInclude Include="Options\CrossSectionOptions.h" />
     <ClInclude Include="Options\DispresionOptions.h" />
+    <ClInclude Include="Options\FieldOptions.h" />
     <ClInclude Include="Options\fluctuationheightfieldOptions.h" />
     <ClInclude Include="Options\FSLEOptions.h" />
     <ClInclude Include="Options\RenderingOptions.h" />
@@ -294,6 +296,7 @@
     <ClInclude Include="Options\TurbulentMixingOptions.h" />
     <ClInclude Include="ParticleTracing\ParticleTracing.h" />
     <ClInclude Include="Particle\ParticleHelperFunctions.h" />
+    <ClInclude Include="Raycaster\CallerFunctions.h" />
     <ClInclude Include="Raycaster\FieldGenerator3D.h" />
     <ClInclude Include="Raycaster\TimeSpaceField.h" />
     <ClInclude Include="Timer\dummy.h" />
