--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=36,176
 Size=400,400
 Collapsed=0
 
@@ -9,18 +9,18 @@ Size=366,242
 Collapsed=0
 
 [Window][Log]
-Pos=1887,34
-Size=485,261
+Pos=517,256
+Size=411,223
 Collapsed=0
 
 [Window][Raycasting Options]
-Pos=9,239
-Size=497,582
-Collapsed=1
+Pos=2019,697
+Size=497,560
+Collapsed=0
 
 [Window][Solver Options]
-Pos=14,264
-Size=493,575
+Pos=11,169
+Size=489,528
 Collapsed=0
 
 [Window][Dispersion Options]
@@ -49,22 +49,32 @@ Size=391,213
 Collapsed=1
 
 [Window][Datasets]
-Pos=567,38
-Size=268,75
+Pos=23,774
+Size=489,89
 Collapsed=0
 
 [Window][Rendering Options]
-Pos=1164,80
-Size=491,482
+Pos=559,552
+Size=449,347
 Collapsed=0
 
 [Window][Time-Space Rendering]
-Pos=2127,17
-Size=423,220
+Pos=1983,141
+Size=453,551
 Collapsed=0
 
 [Window][View Options]
-Pos=14,44
+Pos=7,6
 Size=490,158
+Collapsed=0
+
+[Window][Visitation Map]
+Pos=777,43
+Size=489,321
+Collapsed=1
+
+[Window][Field Options]
+Pos=938,212
+Size=403,223
 Collapsed=0
 
