--- a/DXTutorial.vcxproj
+++ b/DXTutorial.vcxproj
@@ -230,6 +230,7 @@
       <FileType>Document</FileType>
     </CudaCompile>
     <ClCompile Include="Timer\Timer.cpp" />
+    <CudaCompile Include="VisitationMap\VisitationMap.cu" />
     <ClCompile Include="VolumeIO\BinaryWriter.cpp" />
     <ClCompile Include="VolumeIO\Volume_IO.cpp" />
     <ClCompile Include="Window\RenderWindow.cpp" />
@@ -294,6 +295,7 @@
     <ClInclude Include="Options\RenderingOptions.h" />
     <ClInclude Include="Options\TimeSpace3DOptions.h" />
     <ClInclude Include="Options\TurbulentMixingOptions.h" />
+    <ClInclude Include="Options\VisitationOptions.h" />
     <ClInclude Include="ParticleTracing\ParticleTracing.h" />
     <ClInclude Include="Particle\ParticleHelperFunctions.h" />
     <ClInclude Include="Raycaster\CallerFunctions.h" />
