--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=36,176
-Size=400,400
+Pos=24,178
+Size=414,780
 Collapsed=0
 
 [Window][Line Rendering Options]
@@ -14,13 +14,13 @@ Size=411,223
 Collapsed=0
 
 [Window][Raycasting Options]
-Pos=2019,697
-Size=497,560
+Pos=21,581
+Size=513,598
 Collapsed=0
 
 [Window][Solver Options]
-Pos=11,169
-Size=489,528
+Pos=675,248
+Size=531,772
 Collapsed=0
 
 [Window][Dispersion Options]
@@ -49,32 +49,37 @@ Size=391,213
 Collapsed=1
 
 [Window][Datasets]
-Pos=23,774
-Size=489,89
+Pos=2035,73
+Size=497,201
 Collapsed=0
 
 [Window][Rendering Options]
-Pos=559,552
-Size=449,347
-Collapsed=0
+Pos=1005,413
+Size=427,829
+Collapsed=1
 
 [Window][Time-Space Rendering]
-Pos=1983,141
+Pos=1957,29
 Size=453,551
 Collapsed=0
 
 [Window][View Options]
-Pos=7,6
-Size=490,158
+Pos=1005,47
+Size=532,182
 Collapsed=0
 
 [Window][Visitation Map]
-Pos=777,43
+Pos=2049,23
 Size=489,321
-Collapsed=1
+Collapsed=0
 
 [Window][Field Options]
-Pos=938,212
-Size=403,223
+Pos=16,30
+Size=427,525
+Collapsed=0
+
+[Window][Path-Surface Options]
+Pos=591,62
+Size=306,131
 Collapsed=0
 
