--- a/imgui.ini
+++ b/imgui.ini
@@ -9,18 +9,18 @@ Size=366,242
 Collapsed=0
 
 [Window][Log]
-Pos=517,256
-Size=411,223
+Pos=2139,616
+Size=394,223
 Collapsed=0
 
 [Window][Raycasting Options]
-Pos=21,581
-Size=513,598
+Pos=20,270
+Size=421,478
 Collapsed=0
 
 [Window][Solver Options]
-Pos=675,248
-Size=531,772
+Pos=2111,595
+Size=400,708
 Collapsed=0
 
 [Window][Dispersion Options]
@@ -54,9 +54,9 @@ Size=497,201
 Collapsed=0
 
 [Window][Rendering Options]
-Pos=1005,413
-Size=427,829
-Collapsed=1
+Pos=2115,-1
+Size=397,565
+Collapsed=0
 
 [Window][Time-Space Rendering]
 Pos=1957,29
@@ -64,8 +64,8 @@ Size=453,551
 Collapsed=0
 
 [Window][View Options]
-Pos=1005,47
-Size=532,182
+Pos=19,895
+Size=427,172
 Collapsed=0
 
 [Window][Visitation Map]
@@ -74,12 +74,12 @@ Size=489,321
 Collapsed=0
 
 [Window][Field Options]
-Pos=16,30
-Size=427,525
+Pos=14,7
+Size=425,257
 Collapsed=0
 
 [Window][Path-Surface Options]
-Pos=591,62
-Size=306,131
+Pos=19,756
+Size=427,131
 Collapsed=0
 
